--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "https://tbartoccidev.github.io/tommybartocci/",
+  "homepage": "https://tbartoccidev.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
